tests/ui/const-generics/issues/index_array_bad_type.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/index_array_bad_type.rs:1:34
   |
LL | struct Struct<const N: i128>(pub [u8; N]);
   |                                  ^^^^^^^ expected `usize`, found `i128`
   |
   = note: the length of array `[u8; N]` must be type `usize`

error: the constant `3` is not of type `usize`
  --> $DIR/index_array_bad_type.rs:5:5
   |
LL |     value.0[0]
   |     ^^^^^^^ expected `usize`, found `i128`
   |
   = note: the length of array `[u8; 3]` must be type `usize`

error: aborting due to 2 previous errors

